Added a new Yelp review, along with image file

--- a/team.html
+++ b/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Apr 14 2021 06:26:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Apr 14 2021 06:42:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -67,7 +67,7 @@
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
           <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
-          <p class="disclaimer_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p class="disclaimer_para">Medical Disclaimer: All content on this site is for information and education purposes only, it is not intended to provide medical advice.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
           <h3 class="footer_h3">Navigation</h3>
