--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Apr 14 2021 06:26:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Apr 14 2021 06:42:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -47,6 +47,13 @@
         <div class="testimonial_author">Christina K.</div>
         <div class="testimonial_location">Los Angeles, CA</div>
         <div class="testimonial_date">11/07/2020</div>
+        <div class="testimonial_source">Review from Yelp</div>
+      </div>
+      <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
+        <p class="testimonial_para">&quot;I am so grateful to Dr. Veronica Ryu who has improved my health and well-being so much . . . after suffering a really bad car accident where I was rear ended and suffered the worst whiplash and knee injuries.  I was in so much pain for months and nothing helped until I was referred to Dr Ryu.  She has a wonderful and gentle demeanor and really knows how to bring your body in balance.  I had no idea that acupuncture was so effective in treating pain.  I am a firm believer now and I encourage anyone dealing with chronic pain to see Dr. Ryu at least twice a week for 3 months and you will also be amazed at what she can do.  This office is a family affair which is great.  Dr. Ryu is assisted by her lovely daughter Jennifer while her son Alex mans the reception desk and her husband is also an Acupuncturist.  I find the family unity to be very profound and wonderful and makes it a very different experience than a regular Medical Office.  Forever grateful to have found Dr. Ryu and you will be too.&quot;</p><img src="images/maria_D.jpg" loading="lazy" alt="" class="testimonial_image">
+        <div class="testimonial_author">Maria D.</div>
+        <div class="testimonial_location">Los Angeles, CA</div>
+        <div class="testimonial_date">10/29/2020</div>
         <div class="testimonial_source">Review from Yelp</div>
       </div>
       <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
@@ -747,7 +754,7 @@
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
           <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
-          <p class="disclaimer_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p class="disclaimer_para">Medical Disclaimer: All content on this site is for information and education purposes only, it is not intended to provide medical advice.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
           <h3 class="footer_h3">Navigation</h3>
