--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Apr 14 2021 06:56:51 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Apr 15 2021 06:22:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -47,23 +47,23 @@
       <h2 class="section_h2">See what sets us apart</h2>
       <div class="_4_block_row">
         <div class="_4_block"><img src="images/experienced_acupuncturists.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a7c7d54a-eaff-e079-4052-3746870b5e85" alt="" class="eastern_medicine_icons">
-          <h4 class="icon_h3">Over 20+ Years Experience</h4>
-          <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <h4 class="icon_h3">Over 30+ Years Experience</h4>
+          <p class="icon_para">Years of training and education at prestigious schools, mentorship to </p>
         </div>
         <div class="_4_block"><img src="images/top_rated_professionals.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="ad9224af-31de-81b9-ad67-f7fab77d4898" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">5-Star Rated Acupuncturists</h4>
-          <p class="icon_para">With over 110 five-star reviews across various platforms, you will be treated by some of the best acupuncturists Los Angeles has to offer.</p>
+          <p class="icon_para">With over 110 five-star reviews, Ryu Acupuncture has the reputation and following you deserve to add balance and harmony back to your life.</p>
         </div>
         <div class="_4_block"><img src="images/world_class_quality.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="0e48cd1c-115e-0a82-c8d1-fb48af5c798e" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">World Class Quality &amp; Service</h4>
-          <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p class="icon_para">From check in to check out, your visit will</p>
         </div>
         <div class="_4_block"><img src="images/personalized_care.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="fe2696db-ef17-1778-54a8-3f897ff67ad4" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">Personalized Care</h4>
-          <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p class="icon_para">From check in to check out, your visit will be tailor-made around your body. No cookie cutter or one-size fits all approach here, just pure 1:1 service.</p>
         </div>
       </div>
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="solo_para">Located withi</p>
       <div class="_2_block_row_info">
         <div class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
@@ -186,7 +186,7 @@
     <div class="main_container">
       <div class="block_text_pre_h2">OUR SERVICES</div>
       <h2 class="section_h2">Services to balance your life</h2>
-      <p class="solo_para">Ryu Acupuncture Clinic offers a wide range of holistic preventative and rehabilitative services within the city of Burbank, California. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proved effective for a wide array of chronic conditions. We </p>
+      <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services within the city of Burbank, California. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proved effective for a wide array of chronic conditions. We </p>
       <div class="cards_grid">
         <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291ef5-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/needles_close_up.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291ef7" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" alt="" class="cards_img"></div>
