Several adjustments to footer, added disclaimer, added a grid, changed format some

--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Apr 15 2021 06:22:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 16 2021 06:35:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7712dd7241dd614edcf62e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -330,13 +330,22 @@
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list w-list-unstyled">
-              <li class="footer_hours">Mon: 9:30AM - 6:00PM</li>
-              <li class="footer_hours">Tue: Closed</li>
-              <li class="footer_hours">Wed: 9:30AM - 6:00PM</li>
-              <li class="footer_hours">Thu: Closed</li>
-              <li class="footer_hours">Fri: 9:30AM - 6:00PM</li>
-              <li class="footer_hours">Sat: 9:00AM - 1:30PM</li>
-              <li class="footer_hours">Sun: Closed</li>
+              <li class="footer_hours">Mon: </li>
+              <li class="footer_hours">Tue:</li>
+              <li class="footer_hours">Wed:</li>
+              <li class="footer_hours">Thu:</li>
+              <li class="footer_hours">Fri:</li>
+              <li class="footer_hours">Sat:</li>
+              <li class="footer_hours">Sun:</li>
+            </ul>
+            <ul role="list" class="list w-list-unstyled">
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">Closed</li>
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">Closed</li>
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">9:00AM - 1:30PM</li>
+              <li class="footer_hours">Closed</li>
             </ul>
           </div>
         </div>
@@ -369,6 +378,7 @@
       </div>
     </div>
     <div class="legal_block">
+      <div class="text-block-4">Medical Disclaimer: All content on this site is for information and education purposes only, it is not intended to provide medical advice.</div>
       <div class="legal_text">© 2021 Ryu Acupuncture Clinic, Inc - All rights reserved.</div>
     </div>
   </div>
