More changes to hours up top on home page, changed out gallery, new classes, still more work to do to clean up site

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 16 2021 06:35:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 16 2021 06:55:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -70,41 +70,32 @@
         </div>
         <div class="hours_block">
           <h2 class="services_h3_mobile">Hours</h2>
-          <div class="_2_block_row_horizontal">
-            <div class="_2_block_day_full">
-              <div class="days_text">Monday: </div>
-              <div class="days_text">Tuesday:</div>
-              <div class="days_text">Wednesday:</div>
-              <div class="days_text">Thursday:</div>
-              <div class="days_text">Friday:</div>
-              <div class="days_text">Saturday:</div>
-              <div class="days_text">Sunday:</div>
-            </div>
-            <div class="_2_block_day_short">
-              <div class="days_text">Mon: </div>
-              <div class="days_text">Tue:</div>
-              <div class="days_text">Wed:</div>
-              <div class="days_text">Thu:</div>
-              <div class="days_text">Fri:</div>
-              <div class="days_text">Sat:</div>
-              <div class="days_text">Sun:</div>
-            </div>
-            <div class="_2_block_hours">
-              <div class="hours_text">9:30AM-6PM</div>
-              <div class="hours_text">Closed</div>
-              <div class="hours_text">9:30AM-6PM</div>
-              <div class="hours_text">Closed</div>
-              <div class="hours_text">9:30AM-6PM</div>
-              <div class="hours_text">9AM-1:30PM</div>
-              <div class="hours_text">Closed</div>
-            </div>
+          <div class="w-layout-grid hours_grid_block">
+            <ul role="list" class="list w-list-unstyled">
+              <li class="footer_hours">Mon: </li>
+              <li class="footer_hours">Tue:</li>
+              <li class="footer_hours">Wed:</li>
+              <li class="footer_hours">Thu:</li>
+              <li class="footer_hours">Fri:</li>
+              <li class="footer_hours">Sat:</li>
+              <li class="footer_hours">Sun:</li>
+            </ul>
+            <ul role="list" class="list w-list-unstyled">
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">Closed</li>
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">Closed</li>
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">9:00AM - 1:30PM</li>
+              <li class="footer_hours">Closed</li>
+            </ul>
           </div>
           <p class="paragraph-8">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
         </div>
       </div>
-      <div class="_4_block_row">
-        <div data-w-id="5633b154-1e02-d1dc-e61c-3862799b0a0d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_4_block_left">
-          <a href="#" class="lightbox-link-3 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="">
+      <div class="_5_block_row">
+        <div data-w-id="5633b154-1e02-d1dc-e61c-3862799b0a0d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_left">
+          <a href="#" class="lightbox-link-3 w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_child.jpg" loading="lazy" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -121,8 +112,8 @@
 }</script>
           </a>
         </div>
-        <div data-w-id="6d4c4f45-25e0-28e9-7ddd-291ea3e23c37" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_4_block">
-          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="">
+        <div data-w-id="6d4c4f45-25e0-28e9-7ddd-291ea3e23c37" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
+          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife.jpg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -139,8 +130,8 @@
 }</script>
           </a>
         </div>
-        <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_4_block">
-          <a href="#" class="lightbox-link-2 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="">
+        <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
+          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl.jpg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -157,8 +148,26 @@
 }</script>
           </a>
         </div>
-        <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_4_block_right">
-          <a href="#" class="lightbox-link-4 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="">
+        <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
+          <a href="#" class="lightbox-link-2 w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_family.jpg" loading="lazy" alt="" class="gallery_image">
+            <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "type": "image",
+      "_id": "5f795448e050e114f36745d5",
+      "fileName": "outside_of_ryu_acupuncture.jpg",
+      "origFileName": "outside_of_ryu_acupuncture.jpg",
+      "width": 649,
+      "height": 450,
+      "fileSize": 49062,
+      "url": "images/outside_of_ryu_acupuncture.jpg"
+    }
+  ]
+}</script>
+          </a>
+        </div>
+        <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
+          <a href="#" class="lightbox-link-4 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
