--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 16 2021 06:55:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 16 2021 11:04:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -63,11 +63,58 @@
           <p class="icon_para">From check in to check out, your visit will be tailor-made around your body. No cookie cutter or one-size fits all approach here, just pure 1:1 service.</p>
         </div>
       </div>
-      <p class="solo_para">Located withi</p>
-      <div class="_2_block_row_info">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <div class="block_text_pre_h2_left">CLEANLINESS</div>
+          <h2 class="section_h2_left">Hospital clean office with best in class treatment options</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
         <div class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
         </div>
+      </div>
+      <div class="_2_block_row">
+        <div class="_360_frame_block">
+          <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+        </div>
+        <div class="_2_block">
+          <div class="block_text_pre_h2_left">CLEANLINESS</div>
+          <h2 class="section_h2_left">Hospital clean office with best in class treatment options</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+      </div>
+      <div class="statistics_block">
+        <div class="container">
+          <div class="title-wrap">
+            <div class="block_text_pre_h2">OUR STATISTICS</div>
+            <h3 class="section_h2">Over 900+ happy<br>patients through our doors<br></h3>
+          </div>
+          <div class="feature-number-wrap">
+            <div class="statistic-circle-wrap">
+              <div class="circle-div">
+                <h4 class="counterup">110</h4>
+                <div class="title-capped">5 Star Reviews</div>
+              </div>
+            </div>
+            <div class="arrow-wrap"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow-image"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="" class="arrow-image-mobile"></div>
+            <div class="statistic-circle-wrap">
+              <div class="circle-div">
+                <h1 class="counterup">13,323</h1>
+                <div class="title-capped">Repeat Visits</div>
+              </div>
+            </div>
+            <div class="arrow-wrap"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow_image_right"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d66b5448b854_arrow-down-02.svg" alt="" class="arrow-image-mobile-02"></div>
+            <div class="statistic-circle-wrap">
+              <div class="circle-div">
+                <h1 class="counterup">6</h1>
+                <div class="title-capped">Awards</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2_block_row_info">
         <div class="hours_block">
           <h2 class="services_h3_mobile">Hours</h2>
           <div class="w-layout-grid hours_grid_block">
@@ -95,97 +142,97 @@
       </div>
       <div class="_5_block_row">
         <div data-w-id="5633b154-1e02-d1dc-e61c-3862799b0a0d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_left">
-          <a href="#" class="lightbox-link-3 w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_child.jpg" loading="lazy" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_family.jpg" loading="lazy" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
-      "_id": "5f795448e050e114f36745d5",
-      "fileName": "outside_of_ryu_acupuncture.jpg",
-      "origFileName": "outside_of_ryu_acupuncture.jpg",
-      "width": 649,
-      "height": 450,
-      "fileSize": 49062,
-      "url": "images/outside_of_ryu_acupuncture.jpg"
+      "_id": "5f68a41d4c2aa34a385adb35",
+      "fileName": "dr_jay_ryu_with_family.jpg",
+      "origFileName": "dr_jay_ryu_with_family.jpg",
+      "width": 1000,
+      "height": 750,
+      "fileSize": 72101,
+      "url": "images/dr_jay_ryu_with_family.jpg"
     }
   ]
 }</script>
           </a>
         </div>
         <div data-w-id="6d4c4f45-25e0-28e9-7ddd-291ea3e23c37" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife.jpg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_child.jpg" loading="lazy" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
-      "_id": "5f795448e050e114f36745d5",
-      "fileName": "outside_of_ryu_acupuncture.jpg",
-      "origFileName": "outside_of_ryu_acupuncture.jpg",
-      "width": 649,
-      "height": 450,
-      "fileSize": 49062,
-      "url": "images/outside_of_ryu_acupuncture.jpg"
+      "_id": "6079328338e88c4a3100c5c6",
+      "fileName": "dr_jay_ryu_with_mother_and_child.jpg",
+      "origFileName": "dr_jay_ryu_with_mother_and_child.jpg",
+      "width": 562,
+      "height": 1000,
+      "fileSize": 87789,
+      "url": "images/dr_jay_ryu_with_mother_and_child.jpg"
     }
   ]
 }</script>
           </a>
         </div>
         <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl.jpg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl.jpg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
-      "_id": "5f795448e050e114f36745d5",
-      "fileName": "outside_of_ryu_acupuncture.jpg",
-      "origFileName": "outside_of_ryu_acupuncture.jpg",
-      "width": 649,
-      "height": 450,
-      "fileSize": 49062,
-      "url": "images/outside_of_ryu_acupuncture.jpg"
+      "_id": "5f68a40a57f4968104bad06b",
+      "fileName": "dr_jay_ryu_with_mother_and_little_girl.jpg",
+      "origFileName": "dr_jay_ryu_with_mother_and_little_girl.jpg",
+      "width": 1000,
+      "height": 562,
+      "fileSize": 74998,
+      "url": "images/dr_jay_ryu_with_mother_and_little_girl.jpg"
     }
   ]
 }</script>
           </a>
         </div>
         <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="lightbox-link-2 w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_family.jpg" loading="lazy" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife.jpg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
-      "_id": "5f795448e050e114f36745d5",
-      "fileName": "outside_of_ryu_acupuncture.jpg",
-      "origFileName": "outside_of_ryu_acupuncture.jpg",
-      "width": 649,
-      "height": 450,
-      "fileSize": 49062,
-      "url": "images/outside_of_ryu_acupuncture.jpg"
+      "_id": "607933d5fa1bca7652dddd28",
+      "fileName": "dr_jay_ryu_with_husband_and_wife.jpg",
+      "origFileName": "dr_jay_ryu_with_husband_and_wife.jpg",
+      "width": 750,
+      "height": 1000,
+      "fileSize": 109366,
+      "url": "images/dr_jay_ryu_with_husband_and_wife.jpg"
     }
   ]
 }</script>
           </a>
         </div>
         <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
-          <a href="#" class="lightbox-link-4 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother.jpg 500w, images/dr_jay_ryu_with_happy_mother.jpg 800w, images/dr_jay_ryu_with_happy_mother.jpg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
+      "width": 1200,
+      "caption": "",
+      "height": 1600,
+      "fileName": "dr_jay_ryu_with_happy_mother.jpg",
+      "origFileName": "dr_jay_ryu_with_happy_mother.jpg",
+      "url": "images/dr_jay_ryu_with_happy_mother.jpg",
+      "_id": "607937c5c79f132d25b99651",
       "type": "image",
-      "_id": "5f795448e050e114f36745d5",
-      "fileName": "outside_of_ryu_acupuncture.jpg",
-      "origFileName": "outside_of_ryu_acupuncture.jpg",
-      "width": 649,
-      "height": 450,
-      "fileSize": 49062,
-      "url": "images/outside_of_ryu_acupuncture.jpg"
+      "fileSize": 188658
     }
   ]
 }</script>
           </a>
         </div>
       </div>
-      <div class="insurance_block"></div>
     </div>
   </div>
   <div class="parallax_section">
@@ -231,6 +278,9 @@
         </div>
       </div>
       <a href="services.html" class="ryu_button w-button"><strong>LEARN MORE</strong></a>
+      <div class="insurance_block">
+        <div class="block_text_pre_h2">WE ACCEPT MOST INSURANCES - PLEASE CALL TO VERIFY</div>
+      </div>
     </div>
   </div>
   <div class="parallax_section">
