More adjustments to home page, have to stop mid-stream

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 16 2021 11:04:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 16 2021 19:04:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -28,6 +28,9 @@
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
+      <div>
+        <h3 class="nav_bar_h3">Ryu Acupuncture, Inc</h3>
+      </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" aria-current="page" class="nav_link w-nav-link w--current">Home</a>
         <a href="team.html" class="nav_link w-nav-link">Team</a>
@@ -63,7 +66,6 @@
           <p class="icon_para">From check in to check out, your visit will be tailor-made around your body. No cookie cutter or one-size fits all approach here, just pure 1:1 service.</p>
         </div>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="_2_block_row">
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CLEANLINESS</div>
@@ -76,7 +78,7 @@
       </div>
       <div class="_2_block_row">
         <div class="_360_frame_block">
-          <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+          <a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""></a>
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CLEANLINESS</div>
@@ -114,30 +116,57 @@
           </div>
         </div>
       </div>
-      <div class="_2_block_row_info">
-        <div class="hours_block">
-          <h2 class="services_h3_mobile">Hours</h2>
-          <div class="w-layout-grid hours_grid_block">
-            <ul role="list" class="list w-list-unstyled">
-              <li class="footer_hours">Mon: </li>
-              <li class="footer_hours">Tue:</li>
-              <li class="footer_hours">Wed:</li>
-              <li class="footer_hours">Thu:</li>
-              <li class="footer_hours">Fri:</li>
-              <li class="footer_hours">Sat:</li>
-              <li class="footer_hours">Sun:</li>
-            </ul>
-            <ul role="list" class="list w-list-unstyled">
-              <li class="footer_hours">9:30AM - 6:00PM</li>
-              <li class="footer_hours">Closed</li>
-              <li class="footer_hours">9:30AM - 6:00PM</li>
-              <li class="footer_hours">Closed</li>
-              <li class="footer_hours">9:30AM - 6:00PM</li>
-              <li class="footer_hours">9:00AM - 1:30PM</li>
-              <li class="footer_hours">Closed</li>
-            </ul>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="">
+            <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "width": 649,
+      "caption": "",
+      "height": 450,
+      "fileName": "5f795448e050e114f36745d5_outside_of_ryu_acupuncture.jpg",
+      "origFileName": "outside_of_ryu_acupuncture.jpg",
+      "url": "images/outside_of_ryu_acupuncture.jpg",
+      "_id": "5f795448e050e114f36745d5",
+      "type": "image",
+      "fileSize": 49062
+    }
+  ]
+}</script>
+          </a>
+        </div>
+        <div class="_2_block">
+          <div class="block_text_pre_h2_left">CONVENIENT LOCATION</div>
+          <h2 class="section_h2_left">Hospital clean office with best in class treatment options</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <div class="_2_block_row_mini">
+            <div class="_2_block">
+              <p class="paragraph-8">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
+            </div>
+            <div class="_2_block">
+              <div class="w-layout-grid hours_grid_block">
+                <ul role="list" class="list w-list-unstyled">
+                  <li class="footer_hours">Mon: </li>
+                  <li class="footer_hours">Tue:</li>
+                  <li class="footer_hours">Wed:</li>
+                  <li class="footer_hours">Thu:</li>
+                  <li class="footer_hours">Fri:</li>
+                  <li class="footer_hours">Sat:</li>
+                  <li class="footer_hours">Sun:</li>
+                </ul>
+                <ul role="list" class="list w-list-unstyled">
+                  <li class="footer_hours">9:30AM - 6:00PM</li>
+                  <li class="footer_hours">Closed</li>
+                  <li class="footer_hours">9:30AM - 6:00PM</li>
+                  <li class="footer_hours">Closed</li>
+                  <li class="footer_hours">9:30AM - 6:00PM</li>
+                  <li class="footer_hours">9:00AM - 1:30PM</li>
+                  <li class="footer_hours">Closed</li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <p class="paragraph-8">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
         </div>
       </div>
       <div class="_5_block_row">
@@ -461,7 +490,7 @@
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
           <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
-          <p class="disclaimer_para">Medical Disclaimer: All content on this site is for information and education purposes only, it is not intended to provide medical advice.</p>
+          <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
           <h3 class="footer_h3">Navigation</h3>
