Storing this as a save point, as some changes were made while I was away

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 16 2021 19:04:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Apr 17 2021 06:09:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -55,11 +55,11 @@
         </div>
         <div class="_4_block"><img src="images/top_rated_professionals.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="ad9224af-31de-81b9-ad67-f7fab77d4898" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">5-Star Rated Acupuncturists</h4>
-          <p class="icon_para">With over 110 five-star reviews, Ryu Acupuncture has the reputation and following you deserve to add balance and harmony back to your life.</p>
+          <p class="icon_para">With a multitude of five-star reviews, Ryu Acupuncture has the reputation you deserve to add balance and harmony back to your life.</p>
         </div>
         <div class="_4_block"><img src="images/world_class_quality.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="0e48cd1c-115e-0a82-c8d1-fb48af5c798e" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">World Class Quality &amp; Service</h4>
-          <p class="icon_para">From check in to check out, your visit will</p>
+          <p class="icon_para">From check in to check out, your visit will go smoothly and effortlessly. Let us pamper and cater to your needs as we bring wellness back into your life.</p>
         </div>
         <div class="_4_block"><img src="images/personalized_care.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="fe2696db-ef17-1778-54a8-3f897ff67ad4" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">Personalized Care</h4>
@@ -87,30 +87,30 @@
         </div>
       </div>
       <div class="statistics_block">
-        <div class="container">
-          <div class="title-wrap">
+        <div class="statistics_container">
+          <div class="statistics_title_wrapper">
             <div class="block_text_pre_h2">OUR STATISTICS</div>
             <h3 class="section_h2">Over 900+ happy<br>patients through our doors<br></h3>
           </div>
-          <div class="feature-number-wrap">
-            <div class="statistic-circle-wrap">
-              <div class="circle-div">
-                <h4 class="counterup">110</h4>
-                <div class="title-capped">5 Star Reviews</div>
+          <div class="featured_number_wrapper">
+            <div class="circle_wrapper">
+              <div class="circle_div">
+                <h4 class="counter">110</h4>
+                <div class="circle_titles">5 Star Reviews</div>
               </div>
             </div>
-            <div class="arrow-wrap"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow-image"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="" class="arrow-image-mobile"></div>
-            <div class="statistic-circle-wrap">
-              <div class="circle-div">
-                <h1 class="counterup">13,323</h1>
-                <div class="title-capped">Repeat Visits</div>
+            <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow-image"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="" class="arrow-image-mobile"></div>
+            <div class="circle_wrapper">
+              <div class="circle_div">
+                <h1 class="counter">13,323</h1>
+                <div class="circle_titles">Repeat Visits</div>
               </div>
             </div>
-            <div class="arrow-wrap"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow_image_right"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d66b5448b854_arrow-down-02.svg" alt="" class="arrow-image-mobile-02"></div>
-            <div class="statistic-circle-wrap">
-              <div class="circle-div">
-                <h1 class="counterup">6</h1>
-                <div class="title-capped">Awards</div>
+            <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow_image_right"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d66b5448b854_arrow-down-02.svg" alt="" class="arrow-image-mobile-02"></div>
+            <div class="circle_wrapper">
+              <div class="circle_div">
+                <h1 class="counter">6</h1>
+                <div class="circle_titles">Awards</div>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
           <div class="_2_block_row_mini">
             <div class="_2_block">
-              <p class="paragraph-8">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
+              <p>Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
             </div>
             <div class="_2_block">
               <div class="w-layout-grid hours_grid_block">
@@ -207,7 +207,7 @@
           </a>
         </div>
         <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl.jpg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -225,7 +225,7 @@
           </a>
         </div>
         <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife.jpg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -243,7 +243,7 @@
           </a>
         </div>
         <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother.jpg 500w, images/dr_jay_ryu_with_happy_mother.jpg 800w, images/dr_jay_ryu_with_happy_mother.jpg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -308,7 +308,7 @@
       </div>
       <a href="services.html" class="ryu_button w-button"><strong>LEARN MORE</strong></a>
       <div class="insurance_block">
-        <div class="block_text_pre_h2">WE ACCEPT MOST INSURANCES - PLEASE CALL TO VERIFY</div>
+        <div class="block_text_pre_h2">WE ACCEPT AND ARE IN NETWORK WITH MOST INSURANCE COMPANIES- PLEASE CALL TO VERIFY</div>
       </div>
     </div>
   </div>
