Size adjustments to the testimonials page images

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Apr 18 2021 06:54:25 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 19 2021 06:35:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -142,7 +142,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
           <div class="_2_block_row_mini">
             <div class="_2_block">
-              <p>Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
+              <p class="paragraph-9">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
             </div>
             <div class="_2_block">
               <div class="w-layout-grid hours_grid_block">
@@ -308,7 +308,7 @@
       </div>
       <a href="services.html" class="ryu_button w-button"><strong>LEARN MORE</strong></a>
       <div class="insurance_block">
-        <div class="block_text_pre_h2">WE ACCEPT AND ARE IN NETWORK WITH MOST INSURANCE COMPANIES - PLEASE CALL TO VERIFY</div>
+        <div class="block_text_pre_h2">WE ACCEPT AND ARE IN NETWORK WITH MOST PPO INSURANCE COMPANIES - PLEASE CALL TO VERIFY</div>
       </div>
     </div>
   </div>
